<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/button_home" />
        <item
            android:id="@+id/nav_scan"
            android:icon="@drawable/ic_scan"
            android:title="@string/button_scan" />
        <item
            android:id="@+id/nav_wishlist"
            android:icon="@drawable/ic_wishlist"
            android:title="@string/button_wishlist" />
        <item
            android:id="@+id/nav_library"
            android:icon="@drawable/ic_library"
            android:title="@string/button_shelves" />
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help"
            android:title="@string/button_help" />
    </group>
</menu>
